# libraries

./: .gitignore
dynamic_array/: CMakeLists.txt  Readme.md
dynamic_array/include/dsc/: cdynarray.h
dynamic_array/src/: cdynarray.c
dynamic_array/test/: CMakeLists.txt  dynarray.c
